# drippy-android

./: .gitignore  .gitmodules  Android.mk  LICENSE  Makefile  README.md  build-ffmpeg.cmd  ffmpeg.sh  pkg-config  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/me/vitormac/drippy/: JavascriptBridge.java  MainActivity.java  NowPlaying.java  Utils.java
app/src/main/java/me/vitormac/drippy/bootstrap/: AutoUpdater.java
app/src/main/java/me/vitormac/drippy/codec/: AudioFormat.java  Bitrate.java  FFmpeg.java
app/src/main/java/me/vitormac/drippy/model/: LoaderTask.java  MediaManager.java  Track.java
app/src/main/java/me/vitormac/drippy/providers/: CacheProvider.java  CacheableInputStream.java  Deezer.java  ProviderBase.java  SoundCloud.java
app/src/main/java/me/vitormac/drippy/providers/impl/: CacheProvider.java  Deezer.java  SoundCloud.java
app/src/main/java/me/vitormac/drippy/providers/model/: DataModel.java  DeezerData.java  SoundCloudData.java
app/src/main/java/me/vitormac/drippy/webview/: Drippy.java  DrippyClient.java  DrippyUtils.java  InternalServer.java  RouteHandler.java
app/src/main/java/me/vitormac/drippy/wrapper/: LocalWrapper.java  RemoteWrapper.java
app/src/main/res/drawable/: fade_out.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_play_arrow.xml
app/src/main/res/layout/: activity_main.xml  activity_now_playing.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
